Fix/upload (#6)
* feat: added fixs

* feat: added mongo database

* feat: add workflows ci
